<resources>
    <!--Login Page-->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="show_password">Show Password</string>
    <string name="loginbtn">Login</string>
    <string name="anonloginbtn">Anonymous Login</string>
    <string name="createacct">No Account Yet? Create One!</string>
    <string name="forgotpasswordlink">Forgot Password?</string>
    <string name="minpass">Min characters for password is 6</string>
    <string name="auth_failed">Authentication Failed!</string>

    <!--ForgotPassword Page-->
    <string name="Email">Email :</string>
    <string name="forgotpassword">Forgot Password?</string>
    <string name="verified_email" translatable="false"></string>
    <string name="disclaimer">If you forgot your password please type in your email address as we send a temporary password to your email.Once you have access to your account, you can request a new password.</string>
    <string name="Send_link">Send Link</string>
    <string name="back"><![CDATA[<< Back]]></string>

    <!--Signup Page-->
    <string name="fnamehint">First name</string>
    <string name="emailhint">Email</string>
    <string name="passwordhint">Password</string>
    <string name="countryhint">Enter City, Province/State, Country</string>
    <string name="createaccount">Create Account</string>

    <!--Tracking Page-->
    <string name="app_name">DigitalDashboard</string>
    <string name="speed">Speed :</string>
    <string name="address">Address :</string>
    <string name="altitude">Altitude :</string>
    <string name="longitude">Longitude :</string>
    <string name="latitude">Latitude :</string>
    <string name="SOT">Transportation Type:</string>

    <!--main_menu strings-->
    <string name="normal">Normal</string>
    <string name="satellite">Satellite</string>
    <string name="hybrid">Hybrid</string>
    <string name="terrain">Terrain</string>

    <!--Music and radio strings-->
    <string name="start_duration">00:00:00</string>
    <string name="no_permission">Please Allow Permission To Access MP3</string>
    <string name="radioToast">Please Allow Up To 30 Seconds For Radio Stream To Load</string>
    <string name="imageurl">imageURL</string>
    <string name="link">streamLink</string>
    <string name="description">description</string>
    <string name="LOADING">LOADING</string>
    <string name="PLAY">PLAY</string>
    <string name="PAUSE">PAUSE</string>
    <string name="grey">grey</string>
    <string name="red">red</string>
    <string name="stations">Stations</string>
    <string name="ok">OK</string>
    <string name="Favorites">Favorites</string>
    <string name="favorites">favorites</string>

    <!--navigation strings-->
    <string name="tracking">Tracking</string>
    <string name="logs">Logs</string>
    <string name="radio">FM Radio</string>
    <string name="music">Music Library</string>
    <string name="aboutus">About Us</string>
    <string name="settings">Settings</string>
    <string name="signout">Sign Out</string>
    <string name="quit">Quit</string>
    <string name="title_activity_settings">Settings</string>
    <string name="Open">Open</string>
    <string name="Close">Close</string>
    <string name="welcomeback">Welcome Back</string>
    <string name="google_maps">With the power of Google Maps</string>
    <string name="Current_Speed">Current Speed :</string>
    <string name="Current_Distance_Travelled">Current Distance Travelled :</string>
    <string name="start_tracking">Start Tracking</string>
    <string name="mark">mark</string>
    <string name="units">Use imperial units?</string>
    <string name="kilometers">00km/h</string>
    <string name="add_favr">Added to Favorites</string>
    <string name="remove_favr">Removed from Favorites</string>
    <string name="no_favorites_items">No Favorites</string>
    <string name="no_favorites_msg">Long press on item to add to favorites</string>
    <string name="favorites_remove_msg">Long press on item to remove from favorites</string>

    <!-- for the Log page -->
    <string name="Logs">Logs</string>
    <string name="Select_all_logs">Select all logs</string>
    <string name="Filter_By">Filter By :</string>
    <string name="Delete_all_selected">Delete</string>
    <string name="Share_selected">Share</string>

    <!-- for the Settings page -->
    <string name="lan">Please choose a langauge for the application</string>
    <string name="lantitle">Change Langauge</string>
    <string name="unit">Convert to imperial units</string>
    <string name="secret">App Beta Ver 1.0</string>
    <string name="thanks">Thank you for trying our app!</string>
    <string name="Settings">Settings</string>

    <!-- for User profile-->
    <string name="choosepicture">Choose a profile picture</string>
    <string name="accounttype">Account Type</string>
    <string name="assigneduid">Assigned UID</string>
    <string name="useremail">Email</string>
    <string name="location">Toronto, Ontario</string>
    <string name="savepicture">Save Image</string>
    <string name="userprofile">User Profile</string>

    <!--Dev page-->
    <string name="dev">Developer Mode</string>
    <string name="lang">Select Langauge</string>
    <string name="english">English</string>
    <string name="french">French</string>
    <string name="german">German</string>
    <string name="langchange">Language changed to liking</string>

    <!-- for the aboutus page -->
    <string name="name1" translatable="false">Karan Raj Kanwar</string>
    <string name="AboutUs">About Us </string>
    <string name="name2" translatable="false">Zhill Patel</string>
    <string name="name3" translatable="false">Darren Prong</string>
    <string name="karanquote">"It's always fun to pick on the nerd.....Until he has your IP address."</string>
    <string name="zhillquote">But are you a different animal and the same beast?</string>
    <string name="darrenquote" translatable="false">Don\'t give up the ship!</string>
    <string name="karanpara">"Karan Raj is a 3rd year Humber College student who enjoys app development, web design and databasing. His hobbies consist of playing competitive games, anything automotive based such as working on cars and drinking iced coffee's just to keep the blood pumping!"</string>
    <string name="zhillpara">Zhill Patel is a 3rd year Computer Engineering student at Humber College who is interesting in app design. He is a guy who enjoys and loves the game of basketball and is an avid Toronto sports fan.</string>
    <string name="darrenpara" translatable="false">25 year old junior developer, home town of Milton, ON. A long history of athletics in both high school and at Sheridan College, as well, in my downtime, I love learning about history.I have big dreams of developing software in the areas of entertainment, PC gaming, small business projects, security, and journalism.Currently working on (besides this project obviously) creating small scale greeting/quoting websites for a couple of local business owners in my area. Looking forward to starting my career and meet new developers like myself!</string>
    <string name="lnamehint">Last name</string>

    <!-- for the Notification -->
<string name="dismiss" translatable="false">DISMISS</string>

    <!-- For the Spinner -->
    <string-array name="spinneroptions">
        <item>Running</item>
        <item>Walking</item>
        <item>Car</item>
        <item>Motorcycle</item>
        <item>Scooter</item>
        <item>Bicycle</item>
        <item>Other</item>
    </string-array>
</resources>