<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="fill_parent">

    <ImageView
        android:id="@+id/pic1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="51dp"
        android:layout_marginBottom="8dp"
        android:src="@drawable/ic_radio" />

    <TextView
        android:id="@+id/name1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="42dp"
        android:layout_marginBottom="15dp"
        android:text="@string/name1"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/quote1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="152dp"
        android:text="@string/karanquote" />

    <TextView
        android:id="@+id/description1"
        android:layout_width="300sp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/karanpara"
        android:textSize="12sp" />

    <ImageView
        android:id="@+id/pic2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="91dp"
        android:layout_marginBottom="11dp"
        android:src="@drawable/ic_info_black_24dp" />

    <TextView
        android:id="@+id/name2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="73dp"
        android:layout_marginBottom="23dp"
        android:text="@string/name2"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/quote2"
        android:layout_width="200sp"
        android:layout_height="0dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="151dp"
        android:text="@string/zhillquote" />

    <TextView
        android:id="@+id/description2"
        android:layout_width="300sp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="65dp"
        android:text="@string/zhillpara"
        android:textSize="12sp" />
</ScrollView>