<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:layout_editor_absoluteY="81sp">


        <ImageView
            android:layout_width="150sp"
            android:layout_height="150sp"
            android:layout_gravity="center"
            android:layout_marginBottom="400sp"
            android:src="@drawable/ic_account" />

        <EditText
            android:id="@+id/editTextFname"
            android:layout_width="320sp"
            android:layout_height="wrap_content"
            android:layout_marginTop="230sp"
            android:layout_marginLeft="20sp"
            android:ems="9"
            android:hint="@string/fnamehint"
            android:inputType="text" />

        <EditText
            android:id="@+id/editTextLname"
            android:layout_width="320sp"
            android:layout_height="wrap_content"
            android:layout_marginTop="280sp"
            android:layout_marginLeft="20sp"
            android:ems="9"
            android:hint="@string/lnamehint"
            android:inputType="text" />

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="320sp"
            android:layout_height="wrap_content"
            android:layout_marginTop="330sp"
            android:layout_marginLeft="20sp"
            android:ems="9"
            android:hint="@string/emailhint"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="320sp"
            android:layout_height="wrap_content"
            android:layout_marginTop="380sp"
            android:layout_marginLeft="20sp"
            android:ems="9"
            android:hint="@string/passwordhint"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/Country"
            android:layout_width="320sp"
            android:layout_height="wrap_content"
            android:hint="@string/countryhint"
            android:layout_marginTop="430sp"
            android:layout_marginLeft="20sp"/>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="30sp"
            android:layout_height="30sp"
            android:layout_gravity="center"
            android:layout_marginBottom="20sp"
            android:visibility="invisible"
            android:indeterminate="true" />

        <!--Back and Create account button-->
        <Button
            android:id="@+id/createbutton"
            android:layout_width="320sp"
            android:layout_height="wrap_content"
            android:padding="12sp"
            android:layout_marginTop="510sp"
            android:layout_marginLeft="20sp"
            android:text="@string/createaccount" />

        <Button
            android:id="@+id/backbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="580sp"
            android:layout_marginLeft="130sp"
            android:text="@string/back"
            android:textSize="16sp"
            android:background="@null"
            android:textStyle="normal"
            android:textColor="@android:color/black" />
    </android.support.design.widget.CoordinatorLayout>

