<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteY="81dp">

    <TextView
        android:id="@+id/changetext"
        android:layout_width="201dp"
        android:layout_height="0dp"
        android:layout_marginTop="106dp"
        android:layout_marginBottom="50dp"
        android:text="@string/langchange"
        app:layout_constraintBottom_toTopOf="@+id/english"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/english"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="46dp"
        android:text="@string/english"
        app:layout_constraintBottom_toTopOf="@+id/german"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/changetext" />

    <Button
        android:id="@+id/french"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="54dp"
        android:text="@string/french"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/german"
        app:layout_constraintTop_toBottomOf="@+id/german" />

    <Button
        android:id="@+id/german"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="61dp"
        android:text="@string/german"
        app:layout_constraintBottom_toTopOf="@+id/french"
        app:layout_constraintStart_toStartOf="@+id/english"
        app:layout_constraintTop_toBottomOf="@+id/english" />

</android.support.constraint.ConstraintLayout>