<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
    android:layout_width="200sp"
    android:layout_height="200sp"
    android:layout_centerHorizontal="true"
    android:src="@drawable/ic_account2"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/name1"
        android:textSize="30sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200sp"
        android:textColor="@android:color/black"/>

    <TextView
        android:layout_width="320sp"
        android:layout_height="match_parent"
        android:text="@string/karanquote"
        android:textSize="19sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="260sp"
        android:layout_marginLeft="20sp"
        android:textColor="@android:color/black"/>

    <TextView
        android:layout_width="320sp"
        android:layout_height="match_parent"
        android:text="@string/karanpara"
        android:textSize="16sp"
        android:layout_marginLeft="20sp"
        android:layout_marginTop="330sp"
        android:textColor="@android:color/black"/>


</RelativeLayout>