<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    android:padding="20sp">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100sp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin">

        <ImageView
            android:layout_width="@dimen/logo_w_h"
            android:layout_height="@dimen/logo_w_h"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10sp"
            android:src="@drawable/ic_settings" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="10sp"
            android:text="@string/forgotpassword"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="@dimen/activity_horizontal_margin"
            android:text="@string/disclaimer"
            android:textSize="16sp"
            android:textColor="@android:color/black"/>

            <EditText
                android:id="@+id/input_email1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10sp"
                android:layout_marginTop="20sp"
                android:hint="@string/Email"
                android:inputType="textEmailAddress"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/black" />


        <!--Back and Reset Password Buttons-->
        <Button
            android:id="@+id/forgotbtn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:text="@string/Send_link"
            android:textSize="16sp"
            android:textStyle="normal"
            android:textColor="@android:color/black"/>

        <Button
            android:id="@+id/backbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:text="@string/back"
            android:textSize="16sp"
            android:background="@null"
            android:textStyle="normal"
            android:textColor="@android:color/black"/>
    </LinearLayout>

    <ProgressBar
        android:id="@id/progressBar"
        android:layout_width="30sp"
        android:layout_height="30sp"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="20sp"
        android:visibility="gone"
        />
</android.support.design.widget.CoordinatorLayout>