<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LogsActivity"
    tools:layout_editor_absoluteY="81dp">

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:layout_marginLeft="30sp"
        android:text="@string/Select_all_logs" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60sp"
        android:layout_marginBottom="70sp" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="260sp"
        android:layout_marginTop="500sp"
        android:clickable="true"
        android:text="@string/Share_selected"
        android:src="@drawable/ic_email"/>

    <Button
        android:id="@+id/delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="500sp"
        android:layout_marginLeft="30sp"
        android:text="@string/Delete_all_selected" />

    <TextView
        android:id="@+id/altitudeinfo"
        android:layout_width="280sp"
        android:layout_height="30sp"
        android:layout_marginLeft="30sp"
        android:layout_marginTop="350sp"
        android:text=""
        android:textSize="15sp" />
    <TextView
        android:id="@+id/latitudeinfo"
        android:layout_width="280sp"
        android:layout_height="30sp"
        android:layout_marginLeft="30sp"
        android:layout_marginTop="370sp"
        android:text=""
        android:textSize="15sp" />
    <TextView
        android:id="@+id/longitudeinfo"
        android:layout_width="280sp"
        android:layout_height="30sp"
        android:layout_marginLeft="30sp"
        android:layout_marginTop="390sp"
        android:text=""
        android:textSize="15sp" />
    <TextView
        android:id="@+id/locaddressinfo"
        android:layout_width="280sp"
        android:layout_height="90sp"
        android:layout_marginTop="410sp"
        android:layout_marginLeft="30sp"
        android:text=""
        android:textSize="15sp" />

    <TextView
        android:id="@+id/speedinfo"
        android:layout_width="250sp"
        android:layout_height="30sp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="122dp"
        android:text="" />
</RelativeLayout>